force-app/main/default/objects/Employee__c/fields/Fm_SortKey__c.field-meta.xml
<CustomField>
    <fullName>Fm_SortKey__c</fullName>
    <formula>/* 1. 특별 Role 우선 */
IF(
OR(
ISPICKVAL(JobRole__c, &quot;그룹장&quot;),
ISPICKVAL(JobRole__c, &quot;팀장&quot;)
),
CASE(
TEXT(JobRole__c),
&quot;팀장&quot;, 0,
&quot;그룹장&quot;, 50,
90
),
1000
)

/* 2. Level 정렬 */
+
CASE(
TEXT(JobLevel__c),
&quot;이사&quot;, 100,
&quot;영업대표&quot;, 200,
&quot;책임&quot;, 300,
900
)

/* 3. 일반 Role 정렬 */
+
IF(
OR(
ISPICKVAL(JobRole__c, &quot;그룹장&quot;),
ISPICKVAL(JobRole__c, &quot;팀장&quot;)
),
0,
CASE(
TEXT(JobRole__c),
&quot;Senior Dev&quot;, 10,
&quot;Dev II&quot;, 20,
&quot;Dev I&quot;, 30,
99
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fm_SortKey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>