force-app/main/default/objects/Employee__c/fields/IsPlaceholder__c.field-meta.xml
<CustomField>
    <fullName>IsPlaceholder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPlaceholder</label>
    <type>Checkbox</type>
</CustomField>