force-app/main/default/objects/Employee__c/fields/JobLevel__c.field-meta.xml
<CustomField>
    <fullName>JobLevel__c</fullName>
    <defaultValue>&apos;책임&apos;</defaultValue>
    <label>JobLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>책임</fullName>
            </value>
            <value>
                <fullName>이사</fullName>
            </value>
            <value>
                <fullName>영업대표</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>