force-app/main/default/objects/Employee__c/fields/JobRole__c.field-meta.xml
<CustomField>
    <fullName>JobRole__c</fullName>
    <label>JobRole</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>팀장</fullName>
            </value>
            <value>
                <fullName>그룹장</fullName>
            </value>
            <value>
                <fullName>Senior Dev</fullName>
            </value>
            <value>
                <fullName>Dev II</fullName>
            </value>
            <value>
                <fullName>Dev I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>